리펙토링, 불필요한 소스코드 제거, ERD 생성

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.musinsa'
 version = '0.0.1-SNAPSHOT'
-description = 'musinsa free point sys'
+description = 'musinsa free point system'
 
 java {
 	toolchain {
